// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceField renders correctly 1`] = `
<div>
  <choiceselectfield-stub value="0" options="[object Object]" items="[object Object],[object Object],[object Object]"></choiceselectfield-stub>
  <!---->
</div>
`;

exports[`ChoiceField renders selecte field button with error messages 1`] = `
<div>
  <choicebuttonfield-stub options="[object Object]" items="[object Object],[object Object],[object Object]"></choicebuttonfield-stub>
  <!---->
</div>
`;

exports[`ChoiceField renders the other field 1`] = `
<div>
  <choiceselectfield-stub options="[object Object]" items="[object Object],[object Object],[object Object]"></choiceselectfield-stub>
  <vtextfield-stub color="accent" dark="true" errorcount="1" errormessages="" messages="" rules="" successmessages="" value="XXL" backgroundcolor="accent" dense="true" hint="Veuillez entrez votre taille" loaderheight="2" clearicon="$clear" outlined="true" type="text" class="vd-form-input"></vtextfield-stub>
</div>
`;

exports[`ChoiceField renders the other field when the corresponding choice is selected 1`] = `
<div>
  <choiceselectfield-stub value="autre" options="[object Object]" items="[object Object],[object Object],[object Object]"></choiceselectfield-stub>
  <vexpandtransition-stub mode="in-out" hide-on-leave="">
    <div>
      <h4 class="mb-1 body-1">
        Autre taille
      </h4>
      <vtextarea-stub errorcount="1" errormessages="" messages="" rules="" successmessages="" value="XXL" backgroundcolor="" hint="Veuillez entrez votre taille" loaderheight="2" clearicon="$clear" outlined="true" type="text" autogrow="true" rowheight="24" rows="1" class="vd-form-input"></vtextarea-stub>
    </div>
  </vexpandtransition-stub>
</div>
`;
